syntax = "proto3";

option csharp_namespace = "SpeechTranscriptionServer";

message TranscriptionData {
    double start = 1;
    double end = 2;
    string text = 3;
}

message ResponseData {
    string file_name = 1;
    repeated TranscriptionData transcription_datas = 2;
}

message RequestData {
    string file_path = 1;
    string language = 2;
}

service SpeechTranscription
{
    rpc GetTranscription(RequestData) returns (ResponseData);
}